# app_treino

./: Cargo.toml  Dioxus.toml  README.md
.cargo/: config.toml
.github/workflows/: build.yml
android/: proguard-rules.pro
assets/: main.css
src/: main.rs
src/components/: mod.rs
src/components/dashboard/: dashboard.rs
src/components/home/: home.rs
src/components/progress/: progress.rs
src/components/stats/: stats.rs
src/components/workout/: create_workout.rs  list_workout.rs  mod.rs  view_workout.rs  workout.rs
src/models/: mod.rs  tabs.rs  workout.rs
